runtime object indexing

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -2472,7 +2472,7 @@
     <comment>Placeholder text for the main search box in the settings editor.</comment>
   </data>
   <data name="Search_NoResults" xml:space="preserve">
-    <value>No results for {}</value>
-    <comment>{Locked="{}"} Displayed when no results were found for a given query. "{}" will be replaced with the query.</comment>
+    <value>No results for "{}"</value>
+    <comment>{Locked=""{}""} Displayed when no results were found for a given query. "{}" will be replaced with the query.</comment>
   </data>
 </root>
