--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -982,4 +982,7 @@
   <data name="InvalidRegex" xml:space="preserve">
     <value>An invalid regular expression was found.</value>
   </data>
+  <data name="NewTmuxControlTab.Text" xml:space="preserve">
+    <value>Tmux Control Tab</value>
+  </data>
 </root>
