--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -982,6 +982,9 @@
   <data name="InvalidRegex" xml:space="preserve">
     <value>An invalid regular expression was found.</value>
   </data>
+  <data name="TmuxControlInfo" xml:space="preserve">
+    <value>Running in tmux control mode; Press 'q' to detach:</value>
+  </data>
   <data name="NewTmuxControlTab.Text" xml:space="preserve">
     <value>Tmux Control Tab</value>
   </data>
