--- a/src/cascadia/TerminalSettingsModel/Resources/zh-CN/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/zh-CN/Resources.resw
@@ -226,7 +226,7 @@
     <value>上</value>
   </data>
   <data name="DirectionPrevious" xml:space="preserve">
-    <value>上一步</value>
+    <value>上一个</value>
   </data>
   <data name="DuplicatePaneCommandKey" xml:space="preserve">
     <value>复制窗格</value>
@@ -258,7 +258,7 @@
     <value>移动焦点</value>
   </data>
   <data name="MoveFocusWithArgCommandKey" xml:space="preserve">
-    <value>向 {0}移动焦点</value>
+    <value>将焦点向 {0} 移动</value>
     <comment>{0} will be replaced with one of the four directions "DirectionLeft", "DirectionRight", "DirectionUp", "DirectionDown"</comment>
   </data>
   <data name="MoveFocusToLastUsedPane" xml:space="preserve">
@@ -348,13 +348,13 @@
     <value>重置字号</value>
   </data>
   <data name="ResetTabColorCommandKey" xml:space="preserve">
-    <value>重设标签颜色</value>
+    <value>重置标签页颜色</value>
   </data>
   <data name="ResetTabNameCommandKey" xml:space="preserve">
     <value>重置标签页标题</value>
   </data>
   <data name="OpenTabRenamerCommandKey" xml:space="preserve">
-    <value>重命名选项卡</value>
+    <value>重命名标签页...</value>
   </data>
   <data name="ResizePaneCommandKey" xml:space="preserve">
     <value>调整窗格大小</value>
@@ -405,7 +405,7 @@
     <value>添加滚动标记</value>
   </data>
   <data name="AddMarkWithColorCommandKey" xml:space="preserve">
-    <value>添加滚动标记，color:{0}</value>
+    <value>添加滚动标记，color: {0}</value>
     <comment>{Locked="color"}. "color" is a literal parameter name that shouldn't be translated. {0} will be replaced with a color in hexadecimal format, like `#123456`</comment>
   </data>
   <data name="ClearMarkCommandKey" xml:space="preserve">
@@ -415,7 +415,7 @@
     <value>清除所有标记</value>
   </data>
   <data name="SendInputCommandKey" xml:space="preserve">
-    <value>发送输入:“{0}”</value>
+    <value>发送输入：“{0}”</value>
     <comment>{0} will be replaced with a string of input as defined by the user</comment>
   </data>
   <data name="SetColorSchemeCommandKey" xml:space="preserve">
@@ -460,7 +460,7 @@
     <value>打开建议</value>
   </data>
   <data name="ToggleCommandPaletteCommandLineModeCommandKey" xml:space="preserve">
-    <value>在命令行模式里切换命令面板</value>
+    <value>在命令行模式下切换命令面板</value>
   </data>
   <data name="ToggleFocusModeCommandKey" xml:space="preserve">
     <value>切换专注模式</value>
@@ -506,13 +506,13 @@
     <value>切换终端视觉效果</value>
   </data>
   <data name="BreakIntoDebuggerCommandKey" xml:space="preserve">
-    <value>强行进入调试程序</value>
+    <value>中断并进入调试器</value>
   </data>
   <data name="OpenSettingsUICommandKey" xml:space="preserve">
     <value>打开设置</value>
   </data>
   <data name="RenameWindowCommandKey" xml:space="preserve">
-    <value>重命名窗口到 “{0}”</value>
+    <value>将窗口重命名为“{0}”</value>
     <comment>{0} will be replaced with a user-defined string</comment>
   </data>
   <data name="ResetWindowNameCommandKey" xml:space="preserve">
@@ -536,7 +536,7 @@
     <comment>{0} will be replaced with a user-specified number</comment>
   </data>
   <data name="ExportBufferToPathCommandKey" xml:space="preserve">
-    <value>将文本导出到{0}</value>
+    <value>将文本导出到 {0}</value>
     <comment>{0} will be replaced with a user-specified file path</comment>
   </data>
   <data name="ExportBufferCommandKey" xml:space="preserve">
@@ -577,11 +577,11 @@
     <comment>A command to change how transparent the background of the window is</comment>
   </data>
   <data name="DecreaseOpacityCommandKey" xml:space="preserve">
-    <value>将背景不透明度降低{0}%</value>
+    <value>将背景不透明度降低 {0}%</value>
     <comment>A command to change how transparent the background of the window is</comment>
   </data>
   <data name="AdjustOpacityCommandKey" xml:space="preserve">
-    <value>将背景不透明度设置为{0}%</value>
+    <value>将背景不透明度设置为 {0}%</value>
     <comment>A command to change how transparent the background of the window is</comment>
   </data>
   <data name="RestoreLastClosedCommandKey" xml:space="preserve">
@@ -595,10 +595,10 @@
     <comment>A command that will toggle "mark mode". This is a mode in the application where the user can mark the text by selecting portions of the text.</comment>
   </data>
   <data name="ToggleBlockSelectionCommandKey" xml:space="preserve">
-    <value>切换块选择</value>
+    <value>切换块选择模式</value>
   </data>
   <data name="SwitchSelectionEndpointCommandKey" xml:space="preserve">
-    <value>切换选择终结点</value>
+    <value>切换选择端点</value>
   </data>
   <data name="ColorSelection_allMatches" xml:space="preserve">
     <value>所有匹配项</value>
@@ -698,14 +698,14 @@
     <value>关闭所有其他窗格</value>
   </data>
   <data name="ToggleBroadcastInputCommandKey" xml:space="preserve">
-    <value>将广播输入切换到所有窗格</value>
+    <value>切换向所有窗格广播输入</value>
     <comment>When enabled, input will go to all panes in this tab simultaneously</comment>
   </data>
   <data name="RestartConnectionKey" xml:space="preserve">
-    <value>重新启动连接</value>
+    <value>重启连接</value>
   </data>
   <data name="OpenScratchpadKey" xml:space="preserve">
-    <value>打开便笺本</value>
+    <value>打开便笺</value>
   </data>
   <data name="SelectOutputNextCommandKey" xml:space="preserve">
     <value>选择下一个命令输出</value>
@@ -827,7 +827,7 @@
     <value>单行</value>
   </data>
   <data name="WithControlSequencesActionArgumentLocalized" xml:space="preserve">
-    <value>使用控件序列</value>
+    <value>使用控制序列</value>
   </data>
   <data name="CopyFormattingActionArgumentLocalized" xml:space="preserve">
     <value>复制格式</value>
@@ -848,7 +848,7 @@
     <value>方向</value>
   </data>
   <data name="DeltaActionArgumentLocalized" xml:space="preserve">
-    <value>三角形</value>
+    <value>增量</value>
   </data>
   <data name="InputActionArgumentLocalized" xml:space="preserve">
     <value>输入</value>
@@ -869,7 +869,7 @@
     <value>方案名称</value>
   </data>
   <data name="TabColorActionArgumentLocalized" xml:space="preserve">
-    <value>工作表标签颜色</value>
+    <value>选项卡颜色</value>
   </data>
   <data name="TitleActionArgumentLocalized" xml:space="preserve">
     <value>标题</value>
@@ -893,7 +893,7 @@
     <value>名称</value>
   </data>
   <data name="KeyChordActionArgumentLocalized" xml:space="preserve">
-    <value>键组合</value>
+    <value>快捷键组合</value>
   </data>
   <data name="SourceActionArgumentLocalized" xml:space="preserve">
     <value>源</value>
@@ -911,7 +911,7 @@
     <value>桌面</value>
   </data>
   <data name="MonitorActionArgumentLocalized" xml:space="preserve">
-    <value>监视</value>
+    <value>显示器</value>
   </data>
   <data name="ToggleVisibilityActionArgumentLocalized" xml:space="preserve">
     <value>切换可见性</value>
@@ -953,7 +953,7 @@
     <value>配置文件索引</value>
   </data>
   <data name="ProfileActionArgumentLocalized" xml:space="preserve">
-    <value>个人资料</value>
+    <value>配置文件</value>
   </data>
   <data name="SuppressApplicationTitleActionArgumentLocalized" xml:space="preserve">
     <value>抑制应用程序标题</value>
