Updated strings of "Move tab" commands to include "left" and "right" (#19708)
## Summary of the Pull Request
* As per the discussions in
[#19228](https://github.com/microsoft/terminal/issues/19228), updated
the command palette strings.
* Similar change is done for the strings used in Terminal settings
editor as well.

## PR Checklist
Closes #19228

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1975,12 +1975,12 @@
     <comment>An option to choose from for the "move tab direction". No movement.</comment>
   </data>
   <data name="Actions_MoveTabDirectionForward.Content" xml:space="preserve">
-    <value>Forward</value>
-    <comment>An option to choose from for the "move tab direction". Moves the tab forward.</comment>
+    <value>Forward (right)</value>
+    <comment>An option to choose from for the "move tab direction". Moves the tab forward (right).</comment>
   </data>
   <data name="Actions_MoveTabDirectionBackward.Content" xml:space="preserve">
-    <value>Backward</value>
-    <comment>An option to choose from for the "move tab direction". Moves the tab backward.</comment>
+    <value>Backward (left)</value>
+    <comment>An option to choose from for the "move tab direction". Moves the tab backward (left).</comment>
   </data>
   <data name="Actions_ScrollToMarkDirectionPrevious.Content" xml:space="preserve">
     <value>Previous</value>
