--- a/src/cascadia/TerminalSettingsModel/Resources/es-ES/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/es-ES/Resources.resw
@@ -172,7 +172,7 @@
   </data>
   <data name="MoveTabCommandKey" xml:space="preserve">
     <value>Mover pestaña {0}</value>
-    <comment>{0} will be replaced with a "forward (right)" / "backward (left)"</comment>
+    <comment>{0} will be replaced with a "forward" / "backward"</comment>
   </data>
   <data name="MoveTabToWindowCommandKey" xml:space="preserve">
     <value>Mover pestaña a la ventana "{0}"</value>
@@ -180,6 +180,12 @@
   </data>
   <data name="MoveTabToNewWindowCommandKey" xml:space="preserve">
     <value>Mover pestaña a una nueva ventana</value>
+  </data>
+  <data name="MoveTabDirectionForward" xml:space="preserve">
+    <value>adelante</value>
+  </data>
+  <data name="MoveTabDirectionBackward" xml:space="preserve">
+    <value>atrás</value>
   </data>
   <data name="CloseTabsAfterDefaultCommandKey" xml:space="preserve">
     <value>Cerrar todas las pestañas después de la pestaña actual</value>
