--- a/src/cascadia/TerminalSettingsModel/Resources/fr-FR/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/fr-FR/Resources.resw
@@ -172,7 +172,7 @@
   </data>
   <data name="MoveTabCommandKey" xml:space="preserve">
     <value>Déplacer l’onglet {0}</value>
-    <comment>{0} will be replaced with a "forward (right)" / "backward (left)"</comment>
+    <comment>{0} will be replaced with a "forward" / "backward"</comment>
   </data>
   <data name="MoveTabToWindowCommandKey" xml:space="preserve">
     <value>Déplacer l’onglet vers la fenêtre « {0} »</value>
@@ -180,6 +180,12 @@
   </data>
   <data name="MoveTabToNewWindowCommandKey" xml:space="preserve">
     <value>Déplacer l'onglet vers une nouvelle fenêtre</value>
+  </data>
+  <data name="MoveTabDirectionForward" xml:space="preserve">
+    <value>suivant</value>
+  </data>
+  <data name="MoveTabDirectionBackward" xml:space="preserve">
+    <value>précédent</value>
   </data>
   <data name="CloseTabsAfterDefaultCommandKey" xml:space="preserve">
     <value>Fermer tous les onglets après l’onglet actif</value>
